WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110315
Web Inspector: fix message for non-existent domain warning
https://bugs.webkit.org/show_bug.cgi?id=110315
Summary
Web Inspector: fix message for non-existent domain warning
Yury Semikhatsky
Reported
2013-02-20 01:54:58 PST
1. Open inspector for some page and make sure that profiles panel hasn't been shown 2. Navigate inspected page to another URL 3. Open inspector on inspector and look at the console Result: Two errors that there were messages for non-existent profiler domains.
Attachments
Patch
(8.76 KB, patch)
2013-02-20 01:57 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(8.76 KB, patch)
2013-02-20 03:52 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2013-02-20 01:57:18 PST
Created
attachment 189266
[details]
Patch
Alexander Pavlov (apavlov)
Comment 2
2013-02-20 01:59:21 PST
Comment on
attachment 189266
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189266&action=review
> Source/WebCore/inspector/InspectorHeapProfilerAgent.cpp:102 > // Revisit this.
Is this comment still necessary?
Yury Semikhatsky
Comment 3
2013-02-20 03:52:31 PST
Created
attachment 189281
[details]
Patch
Yury Semikhatsky
Comment 4
2013-02-20 03:52:56 PST
(In reply to
comment #2
)
> (From update of
attachment 189266
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=189266&action=review
> > > Source/WebCore/inspector/InspectorHeapProfilerAgent.cpp:102 > > // Revisit this. > > Is this comment still necessary?
No. Removed.
WebKit Review Bot
Comment 5
2013-02-20 04:17:34 PST
Comment on
attachment 189281
[details]
Patch Clearing flags on attachment: 189281 Committed
r143449
: <
http://trac.webkit.org/changeset/143449
>
WebKit Review Bot
Comment 6
2013-02-20 04:17:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug