Web Inspector: fix message for non-existent domain warning https://bugs.webkit.org/show_bug.cgi?id=110315

Reviewed by Alexander Pavlov.

Only send (Heap)Profiler.resetProfiles event if the client has
requested profile headers before.

* inspector/InspectorHeapProfilerAgent.cpp:
(HeapProfilerAgentState):
(WebCore):
(WebCore::InspectorHeapProfilerAgent::InspectorHeapProfilerAgent):
(WebCore::InspectorHeapProfilerAgent::resetFrontendProfiles):
(WebCore::InspectorHeapProfilerAgent::clearFrontend):
(WebCore::InspectorHeapProfilerAgent::restore):
(WebCore::InspectorHeapProfilerAgent::getProfileHeaders):
* inspector/InspectorHeapProfilerAgent.h:
(InspectorHeapProfilerAgent):
* inspector/InspectorProfilerAgent.cpp:
(ProfilerAgentState):
(WebCore::InspectorProfilerAgent::InspectorProfilerAgent):
(WebCore::InspectorProfilerAgent::addProfile):
(WebCore::InspectorProfilerAgent::disable):
(WebCore::InspectorProfilerAgent::getProfileHeaders):
(WebCore):
(WebCore::InspectorProfilerAgent::resetFrontendProfiles):
(WebCore::InspectorProfilerAgent::restore):
* inspector/InspectorProfilerAgent.h:
(InspectorProfilerAgent):


Canonical link: https://commits.webkit.org/128630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143449 268f45cc-cd09-0410-ab3c-d52691b4dbfc